// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Textarea /> is checked shouldComponentUpdate with new props 1`] = `
<div
  className="mfui-textarea mfui-textarea_color_default"
>
  <div
    className="mfui-textarea__field-wrapper mfui-textarea__field-wrapper_no-touch"
  >
    <div>
      <textarea
        autoComplete="off"
        className="mfui-textarea__field"
      />
    </div>
  </div>
</div>
`;

exports[`<Textarea /> is checked shouldComponentUpdate with new state 1`] = `
<div
  className="mfui-textarea mfui-textarea_error mfui-textarea_color_default"
>
  <div
    className="mfui-textarea__field-wrapper"
  >
    <div>
      <textarea
        autoComplete="off"
        className="mfui-textarea__field"
      />
    </div>
  </div>
  <div
    className="mfui-textarea__text mfui-textarea__text_error"
  >
    text
  </div>
</div>
`;

exports[`<Textarea /> is checked shouldComponentUpdate with props 1`] = `
<div
  className="mfui-textarea mfui-textarea_error mfui-textarea_color_default"
>
  <div
    className="mfui-textarea__field-wrapper mfui-textarea__field-wrapper_no-touch"
  >
    <div>
      <textarea
        autoComplete="off"
        className="mfui-textarea__field"
      />
    </div>
  </div>
  <div
    className="mfui-textarea__text mfui-textarea__text_error"
  >
    text
  </div>
</div>
`;

exports[`<Textarea /> is checked shouldComponentUpdate with state 1`] = `
<div
  className="mfui-textarea mfui-textarea_error mfui-textarea_color_default"
>
  <div
    className="mfui-textarea__field-wrapper mfui-textarea__field-wrapper_no-touch"
  >
    <div>
      <textarea
        autoComplete="off"
        className="mfui-textarea__field"
      />
    </div>
  </div>
  <div
    className="mfui-textarea__text mfui-textarea__text_error"
  >
    text
  </div>
</div>
`;

exports[`<Textarea /> it label and id 1`] = `
<div
  className="mfui-textarea mfui-textarea_color_default"
>
  <InputLabel
    htmlFor="id"
  >
    label
  </InputLabel>
  <div
    className="mfui-textarea__field-wrapper mfui-textarea__field-wrapper_no-touch"
  >
    <div>
      <textarea
        autoComplete="off"
        className="mfui-textarea__field"
        id="id"
      />
    </div>
  </div>
</div>
`;

exports[`<Textarea /> it renders Textarea 1`] = `
<div
  className="mfui-textarea mfui-textarea_color_default"
>
  <div
    className="mfui-textarea__field-wrapper mfui-textarea__field-wrapper_no-touch"
  >
    <div>
      <textarea
        autoComplete="off"
        className="mfui-textarea__field"
      />
    </div>
  </div>
</div>
`;

exports[`<Textarea /> it renders error icon 1`] = `
<div
  className="mfui-textarea mfui-textarea_error mfui-textarea_color_default"
>
  <div
    className="mfui-textarea__field-wrapper mfui-textarea__field-wrapper_no-touch"
  >
    <div>
      <textarea
        autoComplete="off"
        className="mfui-textarea__field"
      />
    </div>
  </div>
  <div
    className="mfui-textarea__text mfui-textarea__text_error"
  >
    text
  </div>
</div>
`;

exports[`<Textarea /> it renders texts 1`] = `
<div
  className="mfui-textarea mfui-textarea_color_default"
>
  <div
    className="mfui-textarea__field-wrapper mfui-textarea__field-wrapper_no-touch"
  >
    <div>
      <textarea
        autoComplete="off"
        className="mfui-textarea__field"
      />
    </div>
  </div>
  <div
    className="mfui-textarea__text mfui-textarea__text_comment"
  >
    text
  </div>
  <div
    className="mfui-textarea__text mfui-textarea__text_success"
  >
    text
  </div>
</div>
`;

exports[`<Textarea /> it renders valid icon 1`] = `
<div
  className="mfui-textarea mfui-textarea_valid mfui-textarea_color_default"
>
  <div
    className="mfui-textarea__field-wrapper mfui-textarea__field-wrapper_no-touch"
  >
    <div>
      <textarea
        autoComplete="off"
        className="mfui-textarea__field"
      />
    </div>
  </div>
  <div
    className="mfui-textarea__text mfui-textarea__text_error"
  >
    text
  </div>
</div>
`;

exports[`<Textarea /> it renders without error icon 1`] = `
<div
  className="mfui-textarea mfui-textarea_error mfui-textarea_color_default"
>
  <div
    className="mfui-textarea__field-wrapper mfui-textarea__field-wrapper_no-touch"
  >
    <div>
      <textarea
        autoComplete="off"
        className="mfui-textarea__field"
      />
    </div>
  </div>
</div>
`;

exports[`<Textarea /> it renders without valid icon 1`] = `
<div
  className="mfui-textarea mfui-textarea_valid mfui-textarea_color_default"
>
  <div
    className="mfui-textarea__field-wrapper mfui-textarea__field-wrapper_no-touch"
  >
    <div>
      <textarea
        autoComplete="off"
        className="mfui-textarea__field"
      />
    </div>
  </div>
</div>
`;

exports[`<Textarea /> renders Textarea on mobile resolution 1`] = `
<div
  className="mfui-textarea mfui-textarea_color_default"
>
  <div
    className="mfui-textarea__field-wrapper"
  >
    <div>
      <textarea
        autoComplete="off"
        className="mfui-textarea__field"
      />
    </div>
  </div>
</div>
`;
